Fix spacing between enbale-groups label and select2

--- a/settings/css/settings.css
+++ b/settings/css/settings.css
@@ -726,6 +726,10 @@ form.section {
 	margin-top: 0;
 }
 
+#apps-list.installed .groups-enable label {
+    margin-right: 3px;
+}
+
 /* LOG */
 #log {
 	white-space:normal;
